--- a/HRSFINAL.ipynb
+++ b/HRSFINAL.ipynb
@@ -5,7 +5,7 @@
    "id": "d4508fe4",
    "metadata": {},
    "source": [
-    "National University Thesis: HRS Study Logistic Regression study\n",
+    "National University Thesis: HRS Study: Binary Logistic Regression\n",
     "===="
    ]
   },
